# axum_user

./: Cargo.toml
src/: main.rs
src/boot_server/: state.rs
src/dao/: user_dao.rs
src/entitys/: mod.rs  prelude.rs  users.rs  users_demo.rs
src/error/: api_reponse.rs  api_result.rs  api_return.rs  error.rs  mod.rs  result_code.rs
src/handler/: user_handler.rs
src/service/: user_service.rs
src/vo/: user.rs
